--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,22 @@
 .App > div {
   margin-right: 50px;
 }
+
+.active-filter {
+  background-color: dodgerblue;
+  outline: none;
+}
+
+.is-done {
+  opacity: 0.5;
+  color: darkslategrey;
+}
+
+.error {
+  border: 2px solid red;
+}
+
+.error-message {
+  color: red;
+  font-size: 10px;
+}
